--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "openxlsx"]
+	path = openxlsx
+	url = https://github.com/ycphs/openxlsx
+	shallow = true
+	registered = true
